refactor: Arrays.asList() -> List.of() 수정
- Arrays.asList()는 값 변경 가능, Null 허용