@@ -3,7 +3,7 @@ package lotto.domain;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -12,8 +12,8 @@ public class LottoTest {
     @Test
     @DisplayName("당첨 로또와 일치하는 개수 추출")
     void 당첨_로또와_일치하는_개수_추출() {
-        Lotto winner = new Lotto(Arrays.asList(1, 2, 3, 4, 5, 6));
-        Lotto lotto = new Lotto(Arrays.asList(7, 8, 9, 4, 5, 6));
+        Lotto winner = new Lotto(List.of(1, 2, 3, 4, 5, 6));
+        Lotto lotto = new Lotto(List.of(7, 8, 9, 4, 5, 6));
         assertThat(lotto.compareTo(winner)).isEqualTo(3);
     }
 
